Make an image spite Removed all the old theme images that are now on the sprite Added icons to nav Replaced follow us icons version from AI file, add roll over state Overview graphics for challenges, communities, events

--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -2,7 +2,7 @@
 {% load dated_static %}
 {% load humanize %}
 {% block title %}Actions to Repower at Home{% endblock %}
-{% block title_bar_image %}<img src="{% dated_static "images/theme_new/section_actions_large.png" %}" alt="Actions section" height="100" width="100"/>{% endblock %}
+{% block title_bar_image %}sprite_section_action_large{% endblock %}
 {% block title_bar_title %}Actions{% endblock %}
 {% block title_bar_copy %}
     The actions you’ll find here will cut energy waste, lower your monthly bills
