--- a/badges/templates/badges/list.html
+++ b/badges/templates/badges/list.html
@@ -2,7 +2,7 @@
 {% load dated_static %}
 {% block title %}Repower at Home Badges{% endblock %}
 
-{% block title_bar_image %}<img src="{% dated_static "images/theme_new/section_actions_large.png" %}" alt="Actions section" height="100" width="100"/>{% endblock %}
+{% block title_bar_image %}sprite_section_badges_large{% endblock %}
 {% block title_bar_title %}Badges{% endblock %}
 {% block title_bar_copy %}
     The Repower at Home Badges
