--- a/challenges/templates/challenges/list.html
+++ b/challenges/templates/challenges/list.html
@@ -1,5 +1,6 @@
 {% extends "base/nav_9c.html" %}
 {% block title %}Repower at Home Challenges{% endblock %}
+{% block title_bar_image %}sprite_section_challenges_large{% endblock %}
 {% block title_bar_title %}Challenges{% endblock %}
 {% block title_bar_copy %}Aliquam lectus orci, adipiscing et, sodales ac, feugiat non, lacus.{% endblock %}
 {% block content %}
