--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -4,7 +4,7 @@
 {% load search_widget %}
 
 {% block title %}Events on Repower at Home{% endblock %}
-{% block title_bar_image %}<img src="{% dated_static "images/theme_new/section_events_large.png" %}" alt="Events section" height="100" width="100"/>{% endblock %}
+{% block title_bar_image %}sprite_section_events_large{% endblock %}
 {% block title_bar_title %}Events{% endblock %}
 {% block title_bar_copy %}
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
