--- a/static/css/style_new.css
+++ b/static/css/style_new.css
@@ -1,6 +1,7 @@
 @import url('reset.css');
 @import url('fonts.css');
 @import url('common.css');
+@import url('sprites.css');
 @import url('forms.css');
 @import url('grid.css');
 @import url('nuggets.css');
@@ -61,16 +62,11 @@ Home Page Home Page Home Page Home Page Home Page Home Page Home Page Home Page 
 }
 #home_slide_nav_prev, #home_slide_nav_next {
     display: block;
-    height: 55px;
-    width: 55px;
+
     color: transparent;
-    background: transparent url('../images/theme_new/home_nextprev.png') 0px 0px no-repeat;
     margin-top: 100px;
     margin-left: 5px;
 }
-#home_slide_nav_prev:hover { background-position: 0px -55px; }
-#home_slide_nav_next { background-position: -55px 0px; }
-#home_slide_nav_next:hover { background-position: -55px -55px; }
 #home_slide_1 .home_slide_left{ width: 440px;}
 #home_slide_1 .home_slide_right{ width: 330px;}
 #home_slide_2 .home_slide_left{ width: 350px;}
