--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -90,21 +90,13 @@
                 <div class="grid_4 omega">
                     <h2>Follow Us</h2>
                     <div id="footer_social_icons">
-                        <a href="http://www.facebook.com/pages/Repower-at-Home/135501849796509">
-                            <img src="{% dated_static 'images/theme_new/social_fb.png' %}" alt="Facebook icon" 
-                                 title="Find us on Facebook" width="53" height="52"/>
+                        <a href="http://www.facebook.com/pages/Repower-at-Home/135501849796509" class="sprite_social_fb" title="Find us on Facebook" >
                         </a>
-                        <a href="http://twitter.com/repowerathome">
-                            <img src="{% dated_static 'images/theme_new/social_twit.png' %}" alt="Twitter icon" 
-                                 title="Follow us on Twitter" width="53" height="52"/>
+                        <a href="http://twitter.com/repowerathome" class="sprite_social_twitter" title="Follow us on Twitter">
                         </a>
-                        <a href="http://www.youtube.com/repowerhome">
-                            <img src="{% dated_static 'images/theme_new/social_yt.png' %}" alt="YouTube icon" 
-                                 title="Watch us on YouTube" width="53" height="52"/>
+                        <a href="http://www.youtube.com/repowerhome" class="sprite_social_yt" title="Watch us on YouTube">
                         </a>
-                        <a href="{% url blog_feed %}">
-                            <img src="{% dated_static 'images/theme_new/social_rss.png' %}" alt="Feed icon" 
-                                 title="Subscribe to our blog" width="53" height="52"/>
+                        <a href="{% url blog_feed %}" class="sprite_social_rss" title="Subscribe to our blog">
                         </a>
                     </div>
                 </div>
