--- a/templates/base/nav_9c.html
+++ b/templates/base/nav_9c.html
@@ -2,8 +2,8 @@
 {% block content_9c %}
 <div id="content_9c">
     <div id="title_bar_9c">
-        {% block title_bar_image %}{% endblock %}
-        <div>
+        <div class="{% block title_bar_image %}{% endblock %}"></div>
+        <div id="title_bar_9c">
             <h1>{% block title_bar_title %}{% endblock %}</h1>
             <p>{% block title_bar_copy %}{% endblock %}</p>
         </div>
