--- a/templates/rah/home_page.html
+++ b/templates/rah/home_page.html
@@ -11,7 +11,7 @@
         <a href="#4" id="home_slide_nav_4">Create an Account</a>
     </div>
     <div class="grid_1 alpha center">
-        <a href="#" id="home_slide_nav_prev"></a>
+        <a href="#" id="home_slide_nav_prev" class="sprite_slide_nav_prev"></a>
     </div>
     <div class="grid_10">
         <div id="home_slide_container">
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="grid_1 omega">
-        <a href="#" id="home_slide_nav_next"></a>
+        <a href="#" id="home_slide_nav_next" class="sprite_slide_nav_next"></a>
     </div>
     <div class="grid_12 alpha omega" id="home_stat_bar">
         <div class="home_stat_wrap">
