--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -2,7 +2,7 @@
 
 {% load dated_static %}
 {% block title %}Communities on Repower at Home{% endblock %}
-{% block title_bar_image %}<img src="{% dated_static "images/theme_new/section_events_large.png" %}" alt="Events section" height="100" width="100"/>{% endblock %}
+{% block title_bar_image %}sprite_section_communities_large{% endblock %}
 {% block title_bar_title %}Community{% endblock %}
 {% block title_bar_copy %}
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
