Adding heading text to all show pages

--- a/badges/templates/badges/list.html
+++ b/badges/templates/badges/list.html
@@ -5,7 +5,9 @@
 {% block title_bar_image %}sprite_section_badges_large{% endblock %}
 {% block title_bar_title %}Badges{% endblock %}
 {% block title_bar_copy %}
-    The Repower at Home Badges
+    Everyone can recognize a star energy Trendsetter. Badges make it easy to
+    show the world when you take action, and encourage your friends to follow
+    suit. 
 {% endblock %}
 {% block ribbon_bar %}
     Showing {{ badges|length }} badges
