--- a/challenges/templates/challenges/list.html
+++ b/challenges/templates/challenges/list.html
@@ -2,7 +2,11 @@
 {% block title %}Repower at Home Challenges{% endblock %}
 {% block title_bar_image %}sprite_section_challenges_large{% endblock %}
 {% block title_bar_title %}Challenges{% endblock %}
-{% block title_bar_copy %}Aliquam lectus orci, adipiscing et, sodales ac, feugiat non, lacus.{% endblock %}
+{% block title_bar_copy %}
+Together we can achieve big things. Join a challenge to help your community
+reach a new goal and take the world one step closer to a clean energy
+transformation. 
+{% endblock %}
 {% block content %}
     {% include "challenges/_nugget_list.html" %}
 {% endblock %}
