--- a/events/templates/events/create.html
+++ b/events/templates/events/create.html
@@ -8,7 +8,10 @@
     Create an Event
 {% endblock %}
 {% block form_info %}
-    info!
+No special experience is needed to organize an energy meet up, just a passion
+for saving energy and a few friends and neighbors. Our <a href="/hosting/">host materials</a> provide
+step by step instructions for executing a great event and lots of fun
+activities and materials to give to guests.
 {% endblock %}
 {% block content %}
     <form id="event_form" action="" method="post">
