--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -7,17 +7,18 @@
 {% block title_bar_image %}sprite_section_events_large{% endblock %}
 {% block title_bar_title %}Events{% endblock %}
 {% block title_bar_copy %}
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+Come together with friends and neighbors to share tips and tricks for saving
+energy at home. Meet ups are also a great place to share information about
+energy efforts in the community and how to get involved. Find one near you or
+host your own.
 {% endblock %}
 {% block ribbon_bar %}Showing {{map_events|length}} events{% endblock %}
 {% block content %}
 <h1>Host an energy meeting</h1>
 <div id="events_map" style="width:100%; height:300px; border: 1px solid; margin-bottom:18px;"></div>
 <p>
-    Energy meetings bring together people who are already part of a community, like parents in a PTA,
-    parishioners in a church, or people in a book club. <b>The meetings bring the idea of saving energy to this
-    community</b>, and get members excited about taking action to reduce their use.
+We have all the tools and resources you need to host an energy meet up. 
+Check them out <a href="/hosting/">here</a> or start creating your event right away.
 </p>
 {% search_widget event_search %}
 
