added link to about page in footer

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -84,7 +84,7 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
-                        ad minim veniam, quis nostrud exercitation ullamco
+                        ad minim veniam, quis nostrud exercitation ullamco. <a href="/about/">Learn More</a>.
                     </p>
                 </div>
                 <div class="grid_4 omega">
