--- a/static/css/common.css
+++ b/static/css/common.css
@@ -16,7 +16,7 @@ h1, h1 a {
     color: #046495;}
 h2, h3, h4, h5, h6 { font-weight:bold; color: #046495; }
 h1 { font-size: 32px; line-height:45px; margin-bottom:9px; }
-h2 { font-size: 24px; line-height:27px; margin-bottom:9px; }
+h2 { font-size: 24px; line-height:27px; margin-bottom:9px; font-family:"MuseoSlab700", Tahoma, sans-serif;}
 h3 { font-size: 16px; margin-bottom:9px; }
 h4 { font-size: 14px; color: #333333; }
 h5 { font-size: 14px; }
