--- a/static/css/common.css
+++ b/static/css/common.css
@@ -259,8 +259,10 @@ Ribbons Ribbons Ribbons Ribbons Ribbons Ribbons Ribbons Ribbons Ribbons Ribbons 
 .ribbon_small {
     color: #FFFFFF;
     background: #FFFFFF url('../images/theme_new/ribbon_small.png') 0 -53px no-repeat; 
-    padding: 3px 0px 0px 18px;
+    padding-left: 14px;
     font-weight: bold;
+    font-size: 12px;
+    line-height: 22px;
     position: relative;
     height: 22px;
     margin: 9px 0 9px 0;
