--- a/static/css/nuggets.css
+++ b/static/css/nuggets.css
@@ -60,9 +60,61 @@ Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets 
 .nugget_3c_grid_2 li div.digits_5 { font-size: 26px; }
 .nugget_3c_grid_2 li div.digits_6 { font-size: 22px; }
 .nugget_3c_grid_2 li div.digits_7 { font-size: 18px; }
+.nugget_3c_grid_2 li div.digits_max { font-size: 16px; }
 
 
-
+/*nugget_3c_list -- Used as a base for event lists*/
+.nugget_3c_list li {
+    overflow: hidden;
+    margin-bottom: 6px;
+}
+.nugget_3c_list .nugget_3c_list_graphic { float: left; }
+.nugget_3c_list .nugget_3c_list_cal_month {
+    background: #FF2403;
+    color: #FFF;
+    border: 1px solid #FF2403;
+    width: 36px;
+    font-size: 10px;
+    line-height: 13px;
+    font-weight: bold;
+    text-align: center;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.nugget_3c_list .nugget_3c_list_cal_date {
+    text-align: center;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: bold;
+    border: 1px solid #CCCCCC;
+    border-top: 0;
+    width: 36px;
+    -webkit-border-bottom-right-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -moz-border-radius-bottomright: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;    
+}
+.nugget_3c_list .nugget_3c_list_text {
+    margin-left: 9px;
+    float: left;
+    width: 160px;
+    font-weight: bold;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding-top: 3px;
+    line-height: 18px;
+}
+.nugget_3c_list .nugget_3c_list_text span {
+    color: #999999;
+    font-weight: normal;
+}
 
 /*nugget_2c_list -- Used on featured users on home page, paginated lists of users on community pages, etc. */
 .nugget_2c_list {
@@ -154,9 +206,9 @@ Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets 
     color: #666;
 }
 .nugget_6c_list .nugget_6c_list_stat {
-    padding: 9px;
+    padding: 8px;
     width: 61px;
-    height: 61px;
+    height: 64px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -168,12 +220,11 @@ Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets Nuggets 
 }
 .nugget_6c_list .nugget_6c_list_stat div {
     font-size: 12px;
-    width: 60px;
     font-family:"MuseoSlab900", Tahoma, sans-serif;
     line-height: 40px;
 }
 .nugget_6c_list .nugget_6c_list_stat .digits_1 { font-size: 48px; }
-.nugget_6c_list .nugget_6c_list_stat .digits_2 { font-size: 48px; }
+.nugget_6c_list .nugget_6c_list_stat .digits_2 { font-size: 42px; }
 .nugget_6c_list .nugget_6c_list_stat .digits_3 { font-size: 30px; }
 .nugget_6c_list .nugget_6c_list_stat .digits_4 { font-size: 24px; }
 .nugget_6c_list .nugget_6c_list_stat .digits_5 { font-size: 16px; }
