--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -2,21 +2,21 @@
 {% load record %}
 {% load dated_static %}
 {% load humanize %}
-{% block title %}{{profile_user.get_full_name}}'s profile{% endblock %}
+{% block title %}{{user.get_full_name}}'s profile{% endblock %}
 {% block extrahead %}
-    <link rel="alternate" type="application/atom+xml"  href="{% url user_activity_feed profile.user.id %}" title="Repower at Home User Activity" />
+    <link rel="alternate" type="application/atom+xml"  href="{% url user_activity_feed user.id %}" title="Repower at Home User Activity" />
     {# TODO: Add a noindex meta tag here if profile is private #}
 {% endblock %}
 {% block title_bar_image %}
-<img src="{{profile.profile_picture_large}}" alt="Profile image" width="80" height="80"/>
+    <img src="{{user.get_profile.profile_picture_large}}" alt="Profile image" width="80" height="80"/>
 {% endblock %}
-{% block title_bar_title %}{{profile_user.get_full_name}}{% endblock %}
+{% block title_bar_title %}{{user.get_full_name}}{% endblock %}
 {% block title_bar_copy %}
     <p id="title_bar_9c_info">
-        {% if profile.location %}
-            {{ profile.location }} | 
+        {% if user.get_profile.location %}
+            {{ user.get_profile.location }} | 
         {% endif %}
-        <span>Joined {{ profile.user.date_joined|date:"M Y" }}</span>
+        <span>Joined {{ user.date_joined|date:"M Y" }}</span>
     </p>
     {{ profile.about|linebreaksbr }}
     
@@ -28,7 +28,9 @@
     <li><a href="#challenges">Challenges</a></li>
     <li><a href="#events">Events</a></li>
     <li><a href="#badges">Badges</a></li>
-    <li class="tab_nav_link"><a href="#actions">Edit your profile</a></li>
+    {% if not is_others_profile %}
+        <li class="tab_nav_link"><a href="#actions">Edit your profile</a></li>
+    {% endif %}
 {% endblock %}
 {% block content %}
         {% if communities %}
@@ -45,11 +47,11 @@
                 </div>
                 <div class="nugget_6c_list_stat">
                     Members
-                    <div class="{% with group.member_count as digit %}{% if digit < 9 %}digit_1{% else %}{% if digit > 999999 %}digits_max{% else %}{% if digit > 99999 %}digits_6{% else %}{% if digit > 9999 %}digits_5{% else %}{% if digit > 999 %}digits_4{% else %}{% if digit > 99 %}digits_3{% else %}{% if digit > 9 %}digits_2{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endwith %}">{{ group.member_count|intcomma }}</div>
+                    <div class="{% with group.member_count as digit %}{% if digit < 9 %}digits_1{% else %}{% if digit > 999999 %}digits_max{% else %}{% if digit > 99999 %}digits_6{% else %}{% if digit > 9999 %}digits_5{% else %}{% if digit > 999 %}digits_4{% else %}{% if digit > 99 %}digits_3{% else %}{% if digit > 9 %}digits_2{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endwith %}">{{ group.member_count|intcomma }}</div>
                 </div>
                 <div class="nugget_6c_list_stat">
                     Points
-                    <div class="{% with group.total_points as digit %}{% if digit < 9 %}digit_1{% else %}{% if digit > 999999 %}digits_max{% else %}{% if digit > 99999 %}digits_6{% else %}{% if digit > 9999 %}digits_5{% else %}{% if digit > 999 %}digits_4{% else %}{% if digit > 99 %}digits_3{% else %}{% if digit > 9 %}digits_2{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endwith %}">{{ group.total_points|intcomma }}</div>
+                    <div class="{% with group.total_points as digit %}{% if digit < 9 %}digits_1{% else %}{% if digit > 999999 %}digits_max{% else %}{% if digit > 99999 %}digits_6{% else %}{% if digit > 9999 %}digits_5{% else %}{% if digit > 999 %}digits_4{% else %}{% if digit > 99 %}digits_3{% else %}{% if digit > 9 %}digits_2{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endwith %}">{{ group.total_points|intcomma }}</div>
                 </div>
             </li>
             {% endfor %}
@@ -81,7 +83,7 @@
         {% endif %}
         {% if records %}
             <h2>Recent Activity
-                <a class="atom_link" href="{% url user_activity_feed profile.user.id %}">
+                <a class="atom_link" href="{% url user_activity_feed user.id %}">
                     <img src="{% dated_static 'images/theme/social_icons/16/feed.png' %}" alt="atom feed" width="16" height="16"/>
                 </a>
             </h2>
@@ -99,14 +101,28 @@
     <ul class="plain_list nugget_3c_grid_2">
         <li>Actions Completed <div>{{ completed|length }}</div></li>
         <li>Actions Committed <div>{{ committed|length }}</div></li>
-        <li>Points Earned <div class="{% with profile.total_points as digit %}{% if digit < 9 %}digit_1{% else %}{% if digit > 999999 %}digits_max{% else %}{% if digit > 99999 %}digits_6{% else %}{% if digit > 9999 %}digits_5{% else %}{% if digit > 999 %}digits_4{% else %}{% if digit > 99 %}digits_3{% else %}{% if digit > 9 %}digits_2{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endwith %}">{{ profile.total_points|intcomma }}</div></li>
+        <li>Points Earned <div class="{% with user.get_profile.total_points as digit %}{% if digit < 9 %}digits_1{% else %}{% if digit > 999999 %}digits_max{% else %}{% if digit > 99999 %}digits_6{% else %}{% if digit > 9999 %}digits_5{% else %}{% if digit > 999 %}digits_4{% else %}{% if digit > 99 %}digits_3{% else %}{% if digit > 9 %}digits_2{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endif %}{% endwith %}">{{ user.get_profile.total_points|intcomma }}</div></li>
         <li>Challenges Completed <div>0</div></li>
     </ul>
 
     <div class="ribbon_small">
-        Events
+        Events ({{events|length}})
         <div class="ribbon_small_wrap"></div>
     </div>
+    <ul class="plain_list nugget_3c_list">
+        {% for event in events %}
+        <li>
+            <div class="nugget_3c_list_graphic">
+                <div class="nugget_3c_list_cal_month">{{ event.when|date:"M"|upper }}</div>
+                <div class="nugget_3c_list_cal_date">{{ event.when|date:"j" }}</div>
+            </div>
+            <div class="nugget_3c_list_text">
+                <a href="{% url event-detail event.id %}">{{ event.title }}</a><br/>
+                <span>{{ event.location }}</span>
+            </div>            
+        </li>
+        {% endfor %}
+    </ul>
     <div class="ribbon_small">
         Badges
         <div class="ribbon_small_wrap"></div>
