trying keeplines in build.js to see if that lets css gzip and upload to s3 on deploy

--- a/static/css/style_new.css
+++ b/static/css/style_new.css
@@ -1,10 +1,11 @@
 @import url('reset.css');
+@import url('fonts.css');
 @import url('common.css');
 @import url('sprites.css');
 @import url('forms.css');
 @import url('grid.css');
 @import url('nuggets.css');
-
+@import url('comments.css');
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Home Page Home Page Home Page Home Page Home Page Home Page Home Page Home Page Home Page Home Page Home Page Home Page 
