--- a/templates/base/_form.html
+++ b/templates/base/_form.html
@@ -2,7 +2,7 @@
     <div class="form_error">{{ error }}</div>
 {% endfor %}
 {% for field in form.visible_fields %}
-<div class="form_row {% if field.errors %}form_error{% endif %} {{field.field.widget.attrs.class }}">
+<div class="form_row {% if field.errors %}form_error{% endif %} row_{{ field.auto_id }} {{field.field.widget.attrs.class }}">
         {% if "CheckboxInput" in field.field.widget|pprint %}
             {{ field }}{{ field.label_tag }}
         {% else %}
