--- a/templates/base/nav_form.html
+++ b/templates/base/nav_form.html
@@ -4,7 +4,7 @@
         {% block breadcrumbs %}{% endblock %}
     </div>
     <div class="grid_6 alpha">
-        <div id="form_6c">
+        <div id="content_6c">
         {% block content %}{% endblock %}
         </div>
     </div>
