--- a/static/css/common.css
+++ b/static/css/common.css
@@ -13,8 +13,9 @@ a:active { color: #6EC3D1; text-decoration:underline; }
 a:focus { outline: none; }
 h1, h1 a {
     font-family:"MuseoSlab700", Tahoma, sans-serif;
-    color: #046495;}
-h2, h3, h4, h5, h6 { font-weight:bold; color: #046495; }
+    color: #046495;
+    text-rendering: optimizeLegibility;}
+h2, h3, h4, h5, h6 { font-weight:bold; color: #046495; text-rendering: optimizeLegibility; }
 h1 { font-size: 32px; line-height:45px; margin-bottom:9px; }
 h2 { font-size: 24px; line-height:27px; margin-bottom:9px; font-family:"MuseoSlab700", Tahoma, sans-serif; font-weight:normal;}
 h3 { font-size: 16px; margin-bottom:9px; }
