--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -1,7 +1,7 @@
 #form_6c {
-    padding: 9px;
+    /*padding: 9px;*/
 }
-#form_6c h1 {
+form h1 {
     font-family:"MuseoSlab700", Tahoma, sans-serif;
     color: #103665;
     font-size: 38px;
@@ -10,7 +10,7 @@
     margin-bottom: 18px;
 }
 
-#form_6c form {
+form {
     background: #F2F2F2;
     padding: 9px 18px 18px 18px;
     -webkit-border-radius: 9px;
@@ -19,31 +19,31 @@
     height: 100%;
     overflow: auto;
 }
-#form_6c form .form_row {
+form .form_row {
     margin-bottom: 12px;
     float: left;
 }
-#form_6c form .form_row_half {
+form .form_row_half {
     margin-right: 9px;
 }
-#form_6c form .form_row_half_last {
+form.form_row_half_last {
     margin-right: 0px;
 }
 
-#form_6c form label {
+form label {
     display: block;
     color: #103665;
     font-weight: bold;
 }
-#form_6c form .form_help_text {
+form .form_help_text {
     font-size: 12px;
     color: #666666;
     line-height: 16px;
 }
 
-#form_6c form .form_row input[type=text], 
-#form_6c form .form_row input[type=password],
-#form_6c form .form_row textarea
+form .form_row input[type=text], 
+form .form_row input[type=password],
+form .form_row textarea
 {
     border: 1px solid #CCC;
     font-size: 12px;
@@ -51,34 +51,37 @@
     width: 402px;
     outline: none;
 }
-#form_6c form .form_row_half input[type=text], 
-#form_6c form .form_row_half input[type=password] {
+form .form_row textarea {
+    display: block;
+}
+form .form_row_half input[type=text], 
+form .form_row_half input[type=password] {
     width: 187px;
 }
 
-#form_6c form .form_row input:focus, 
-#form_6c form .form_row textarea:focus {
+form .form_row input:focus, 
+form .form_row textarea:focus {
     background: #FFFFF0;
 }
 
-#form_6c form .form_row input[type=checkbox] {
+form .form_row input[type=checkbox] {
     float: left;
     height: 21px;
     margin-right: 6px;
 }
 
-#form_6c form .form_row ul {
+form .form_row ul {
     margin: 0px;
 }
-#form_6c form .form_row ul li {
+form .form_row ul li {
     list-style: none;
 }
-#form_6c form .form_row ul li label {
+form .form_row ul li label {
     font-weight: normal;
     color: #333;
 }
 
-#form_6c .form_buttons {
+form .form_buttons {
     text-align: center;
     padding-top: 18px;
     margin-top: 18px;
@@ -86,22 +89,19 @@
     float: left;
     width: 100%;
 }
-#form_6c .form_buttons .form_cancel {
+form .form_buttons .form_cancel {
     margin-right: 18px;
 }
 
-
-
-
 /*Errors*/
-#form_6c form label.form_error{
+form label.form_error{
     font-size: 12px;
     font-weight: normal;
 }
-#form_6c form .form_error input, #form_6c form .form_error textarea, #form_6c form .form_error label {
+form .form_error input, form .form_error textarea, form .form_error label {
     color: #FF1D1D;
 }
-#form_6c form .form_error input, #form_6c form .form_error textarea{
+form .form_error input, form .form_error textarea{
     border-color: #FF1D1D !important;
 }
 
@@ -228,6 +228,8 @@ button::-moz-focus-inner, input::-moz-focus-inner  { border: 0; padding:0; }
 
 .button_189 { width: 189px; }
 
+
+/*Form info wrap (right col on form pages)*/
 #form_info{
     position: absolute;
     right: -9px;
